--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hof-transpiler",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "./bin/hof-transpiler",
   "description": "Takes files from a src and creates a language dir and translate file based on multiple files parts",
   "license": "GPLv2",
@@ -11,6 +11,7 @@
   ],
   "bin": "./bin/hof-transpiler",
   "dependencies": {
+    "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.4.3",
     "underscore": "^1.8.3",
