hof-transpile now combines duplicate files Previously if there was a duplicate file in shared and the usual path the shared file would take precedence. Now the 2 files will be merged, keeping the contents of both

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mkdirp": "^0.5.1",
     "rimraf": "^2.4.3",
     "underscore": "^1.8.3",
+    "underscore-deep-extend": "0.0.5",
     "walk": "^2.3.9"
   }
 }
