Make parse-args its own module, add tests
- tests arguments are passed in as we expect
- raises question about the importance of the `-w` flag
- use unit tested args parser inside hof-transpiler

--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
     "underscore": "^1.8.3",
     "underscore-deep-extend": "0.0.5",
     "walk": "^2.3.9"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "eslint-plugin-mocha": "^4.5.1",
+    "mocha": "^3.0.2",
+    "proxyquire": "^1.7.10",
+    "sinon": "^1.17.5"
   }
 }
