Add homeoffice eslint config, do some linting ✂️
- keeping spaces before function parens but most everything else is maintained
- have cheated on the walker nesting errors, because that is work to do later

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint-config-homeoffice": "^1.0.0",
     "eslint-plugin-mocha": "^4.5.1",
     "mocha": "^3.0.2",
     "proxyquire": "^1.7.10",
