--- a/.eslintrc
+++ b/.eslintrc
@@ -10,22 +10,16 @@
 #     Rules that have proven to be useful, please follow them.
 #
 
+extends:
+- "homeoffice/config/default"
+
 env:
   es6: true
   node: true
 rules:
-  # important ones
-  no-undef: 2
-  no-underscore-dangle: 2
-  no-warning-comments: 2
-  no-redeclare: 2
-  no-unused-vars: [2, 'local']
-  quotes: [2, 'single', {'allowTemplateLiterals': true}]
-  # less important ones
-  new-cap: 1 # new Foo()
-  no-bitwise: 1 # no x &= y; for you
-  no-debugger: 1
+  ## overides of homeoffice/config/default
+  space-before-function-paren: 0 # i <3 spaces before function parens
   no-console: 1
-  # no-reserved-keys: 2 # disallow reserved words being used as object literal keys (off by default)
+  consistent-return: off
 plugins:
   - mocha
