--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "rimraf": "^2.4.3",
-    "underscore": "^1.8.3",
-    "underscore-deep-extend": "0.0.5",
     "walk": "^2.3.9"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint-config-homeoffice": "^1.0.0",
     "eslint-plugin-mocha": "^4.5.1",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "proxyquire": "^1.7.10",
+    "sinon": "^1.17.5",
+    "sinon-chai": "^2.8.0"
   }
 }
